--- a/client/src/index.css
+++ b/client/src/index.css
@@ -23,6 +23,7 @@
   --color-customGreen1:#92ad67 ;
   --color-customGreen2: #98cd45;
   --color-customGreen3: #689c14;
+  --color-customGreen4:#b64c4c
 }
 
 .scroll-wrapper-y {
