--- a/client/src/index.css
+++ b/client/src/index.css
@@ -92,7 +92,15 @@
 }
 
 
+/* global.css or index.css */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
 
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE + Edge */
+  scrollbar-width: none;     /* Firefox */
+}
 
 
 
